--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mysql": "^2.14.1",
     "node-ipc": "^9.1.1",
     "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "ws": "^3.1.0"
   },
   "devDependencies": {},
